hphp/hack/test/typecheck/generic_fun.php
<?hh
/**
 * Copyright (c) 2014, Facebook, Inc.
 * All rights reserved.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the "hack" directory of this source tree.
 *
 *
 */

function id<T>(T $x): T { return $x; }

function test(): (function(int): int) {
  return id<>;
}
